grammar.js
    source_file: ($) => seq(optional($.shebang), repeat($._statement)),

    _statement: ($) => choice($.expression_statement, $._declaration_statement),

    empty_statement: (_) => ";",

    expression_statement: ($) =>
      choice(seq($._expression, ";"), prec(1, $._expression_ending_with_block)),

    _declaration_statement: ($) =>
      choice(
        $.const_item,
        $.empty_statement,
        $.attribute_item,
        $.inner_attribute_item,
        $.mod_item,
        $.struct_item,
        $.type_item,
        $.function_item,
        $.function_signature_item,
        $.impl_item,
        $.trait_item,
        $.associated_type,
        $.let_declaration,
        $.import_declaration,
      ),

    // Section - Declarations

    struct_item: ($) =>
      seq(
        optional($.visibility_modifier),
        "struct",
        field("name", $._type_identifier),
        field("type_parameters", optional($.type_parameters)),
        field("body", $.struct_body),
      ),

    struct_body: ($) =>
      seq(
        "{",
        field("fields", optional($.field_declaration_list)),
        field("declarations", repeat($._declaration_statement)),
        "}",
      ),

    field_declaration_list: ($) =>
      seq(
        sepBy1(",", seq(repeat($.attribute_item), $.field_declaration)),
        optional(","),
      ),

    field_declaration: ($) =>
      seq(
        optional($.visibility_modifier),
        field("name", $._field_identifier),
        ":",
        field("type", $._type),
      ),

    function_item: ($) =>
      seq(
        optional($.visibility_modifier),
        optional($.extern_modifier),
        "fn",
        field("name", choice($.identifier, $.metavariable)),
        field("type_parameters", optional($.type_parameters)),
        field("parameters", $.parameters),
        field("return_type", $._type),
        field("body", $.block),
      ),

    let_declaration: ($) =>
      seq(
        "let",
        optional($.mutable_specifier),
        field("identifier", $.identifier),
        optional(seq(":", field("type", $._type))),
        optional(seq("=", field("value", $._expression))),
        ";",
      ),

    parameters: ($) =>
      seq("(", sepBy(",", seq(optional($.attribute_item), $.parameter)), ")"),

    parameter: ($) =>
      seq(field("identifier", $.identifier), ":", field("type", $._type)),

    visibility_modifier: (_) => "pub",

    // Section - Types

    _type: ($) =>
      choice(
        $.reference_type,
        $.metavariable,
        $.generic_type,
        $.scoped_type_identifier,
        $.tuple_type,
        $.array_type,
        $.function_type,
        $._type_identifier,
        $.never_type,
        alias(choice(...primitiveTypes), $.primitive_type),
      ),

    reference_type: ($) =>
      seq("&", optional($.mutable_specifier), field("type", $._type)),

    mutable_specifier: (_) => "mut",

    // Section - Expressions

    _expression_except_range: ($) =>
      choice(
        $.unary_expression,
        $.reference_expression,
        $.try_expression,
        $.dereference_expression,
        $.binary_expression,
        $.assignment_expression,
        $.compound_assignment_expr,
        $.type_cast_expression,
        $.call_expression,
        $.return_expression,
        $._literal,
        prec.left($.identifier),
        alias(choice(...primitiveTypes), $.identifier),
        $.self,
        $.scoped_identifier,
        $.generic_function,
        $.field_expression,
        $.array_expression,
        $.tuple_expression,
        $.break_expression,
        $.index_expression,
        $.metavariable,
        $.parenthesized_expression,
        $.struct_expression,
        $._expression_ending_with_block,
      ),

    _expression: ($) => choice($._expression_except_range, $.range_expression),

    _expression_ending_with_block: ($) =>
      choice($.block, $.if_expression, $.while_expression, $.loop_expression),

    scoped_identifier: ($) =>
      seq(
        field("path", choice($._path, $.bracketed_type, $.generic_type)),
        "::",
        field("name", choice($.identifier, $.super)),
      ),

    range_expression: ($) =>
      prec.left(
        PREC.range,
        choice(
          seq($._expression, "..", $._expression),
          seq($._expression, ".."),
          seq("..", $._expression),
          "..",
        ),
      ),

    unary_expression: ($) =>
      prec(PREC.unary, seq(choice("-", "!"), $._expression)),

    dereference_expression: ($) => prec(PREC.try, seq($._expression, "@")),

    try_expression: ($) => prec(PREC.try, seq($._expression, "?")),

    reference_expression: ($) =>
      prec(
        PREC.unary,
        seq("&", optional($.mutable_specifier), field("value", $._expression)),
      ),

    binary_expression: ($) => {
      const table = [
        [PREC.and, "&&"],
        [PREC.or, "||"],
        [PREC.bitand, "&"],
        [PREC.bitor, "|"],
        [PREC.bitxor, "^"],
        [PREC.comparative, choice("==", "!=", "<", "<=", ">", ">=")],
        [PREC.shift, choice("<<", ">>")],
        [PREC.additive, choice("+", "-")],
        [PREC.multiplicative, choice("*", "/", "%")],
        [PREC.range, "|>"],
      ];

      return choice(
        ...table.map(([precedence, operator]) =>
          prec.left(
            // @ts-ignore
            precedence,
            seq(
              field("left", $._expression),
              // @ts-ignore
              field("operator", operator),
              field("right", $._expression),
            ),
          ),
        ),
      );
    },

    assignment_expression: ($) =>
      prec.left(
        PREC.assign,
        seq(field("left", $._expression), "=", field("right", $._expression)),
      ),

    compound_assignment_expr: ($) =>
      prec.left(
        PREC.assign,
        seq(
          field("left", $._expression),
          field("operator", choice("+=", "-=", "*=", "/=", "%=")),
          field("right", $._expression),
        ),
      ),

    type_cast_expression: ($) =>
      prec.left(
        PREC.cast,
        seq(field("value", $._expression), "as", field("type", $._type)),
      ),

    return_expression: ($) =>
      choice(prec.left(seq("return", $._expression)), prec(-1, "return")),

    call_expression: ($) =>
      prec(
        PREC.call,
        seq(
          field("function", $._expression_except_range),
          field("arguments", $.arguments),
        ),
      ),

    arguments: ($) =>
      seq(
        "(",
        sepBy(",", seq(repeat($.attribute_item), $._expression)),
        optional(","),
        ")",
      ),

    array_expression: ($) =>
      seq(
        "[",
        sepBy(",", seq(repeat($.attribute_item), $._expression)),
        optional(","),
        "]",
      ),

    parenthesized_expression: ($) => seq("(", $._expression, ")"),

    tuple_expression: ($) =>
      seq(
        "(",
        seq($._expression, ","),
        repeat(seq($._expression, ",")),
        optional($._expression),
        ")",
      ),

    struct_expression: ($) =>
      seq(
        field(
          "name",
          choice(
            $._type_identifier,
            alias(
              $.scoped_type_identifier_in_expression_position,
              $.scoped_type_identifier,
            ),
            $.generic_type,
          ),
        ),
        field("body", $.field_initializer_list),
      ),

    field_initializer_list: ($) =>
      seq(
        "{",
        sepBy(",", choice($.shorthand_field_initializer, $.field_initializer)),
        optional(","),
        "}",
      ),

    shorthand_field_initializer: ($) =>
      seq(repeat($.attribute_item), $.identifier),

    field_initializer: ($) =>
      seq(
        repeat($.attribute_item),
        field("field", choice($._field_identifier, $.integer_literal)),
        ":",
        field("value", $._expression),
      ),

    loop_expression: ($) => seq("loop", field("body", $.block)),

    break_expression: ($) => prec.left(seq("break", optional($._expression))),

    index_expression: ($) =>
      prec(PREC.call, seq($._expression, "[", $._expression, "]")),

    field_expression: ($) =>
      prec(
        PREC.field,
        seq(
          field("value", $._expression),
          ".",
          field("field", choice($._field_identifier, $.integer_literal)),
        ),
      ),

    block: ($) => seq("{", repeat($._statement), optional($._expression), "}"),

    // Section - Literals

    integer_literal: (_) =>
      token(
        seq(
          choice(/[0-9][0-9_]*/, /0x[0-9a-fA-F_]+/, /0b[01_]+/, /0o[0-7_]+/),
          optional(choice(...numericTypes)),
        ),
      ),

    float_literal: (_) =>
      token(
        seq(
          choice(
            /[0-9][0-9_]*\.[0-9][0-9_]*/,
            /0x[0-9a-fA-F_]+\.[0-9a-fA-F_]+/,
            /0b[01_]+\.[01_]+/,
            /0o[0-7_]+\.[0-7_]+/,
          ),
          optional(choice(...numericTypes)),
        ),
      ),

    boolean_literal: (_) => choice("true", "false"),

    _path: ($) =>
      choice(
        $.self,
        alias(choice(...primitiveTypes), $.identifier),
        $.metavariable,
        $.super,
        $.crate,
        $.identifier,
        $.scoped_identifier,
      ),

    identifier: (_) => /[@_\p{XID_Start}][_\p{XID_Continue}]*/u,

    _type_identifier: ($) => alias($.identifier, $.type_identifier),
    _field_identifier: ($) => alias($.identifier, $.field_identifier),

    self: (_) => "self",
    super: (_) => "super",
    crate: (_) => "crate",

    metavariable: (_) => /\$[a-zA-Z_]\w*/,
  },
});

/**
 * Creates a rule to match one or more of the rules separated by the separator.
 *
 * @param {RuleOrLiteral} sep - The separator to use.
 * @param {RuleOrLiteral} rule
 *
 * @returns {SeqRule}
 */
function sepBy1(sep, rule) {
  return seq(rule, repeat(seq(sep, rule)));
}

/**
 * Creates a rule to optionally match one or more of the rules separated by the separator.
 *
 * @param {RuleOrLiteral} sep - The separator to use.
 * @param {RuleOrLiteral} rule
 *
 * @returns {ChoiceRule}
 */
function sepBy(sep, rule) {
  return optional(sepBy1(sep, rule));
}
